v3.4.1 aliases alignment classes alignleft and alignright with left and right. Resolves issue #43.

--- a/sass/regions/_main-content.scss
+++ b/sass/regions/_main-content.scss
@@ -10,12 +10,14 @@
   .content img {
     max-width: 100%;
 
+    &.left,
     &.alignleft {
       display: block;
       float: left;
       margin: 0 1.25em 1.25em 0;
     }
 
+    &.right,
     &.alignright {
       display: block;
       float: right;
